force-app/main/default/objects/CCP_Pricing_Contractor_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>C0__c</fullName>
        <label>C0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C1__c</fullName>
        <label>C1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C2__c</fullName>
        <label>C2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CCP Pricing Contractor Distribution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>C0__c</columns>
        <columns>C1__c</columns>
        <columns>C2__c</columns>
        <columns>C3__c</columns>
        <columns>C4__c</columns>
        <columns>C5__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Country_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCP Pricing Contractor Distribution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCP Pricing Contractor Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>